<resources>
    <string name="app_name">quizic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="age">Age</string>

    <string name="api_quiz">s</string>
    <string name="question">Question\'</string>
    <string name="next">Next</string>
    <string name="questionA">A</string>
    <string name="optA">A</string>
    <string name="optB">B</string>
    <string name="optC">C</string>
    <string name="optD">D</string>
    <string name="optE">E</string>
    <string name="optF">F</string>
    <string name="game_over">Game Over!</string>
    <string name="you_played_for_genre">You played for Genre:</string>
    <string name="genre">Genre</string>
    <string name="choose_a_genre">CHOOSE A GENRE</string>

    <string-array name="genre">
        <item name="Linux" />
        <item name="" />
        <item name="Linux" />
        <item name="Linux" />

    </string-array>
</resources>