<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="10dp"
    android:layout_marginTop="5dp"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iv_nielit"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/nielit"
        android:layout_margin="30dp"
        />

    <EditText

        android:id="@+id/et_userNameLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:drawableEnd="@drawable/ic_user"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress|text"
        />
    <EditText
        android:drawableEnd="@drawable/ic_key"

        android:id="@+id/et_passwordLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:inputType="textVisiblePassword"

        />
    <Button
        android:id="@+id/btn_loginLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:backgroundTint="@color/teal_700"
        android:textStyle="bold"
        android:text="@string/login"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/ic_login"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_registerLA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:backgroundTint="@color/teal_700"
            android:textStyle="bold"
            android:text="Register"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_registration"
            />
        <Button
            android:id="@+id/btn_forgotPasswordLA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15.5sp"
            android:backgroundTint="@color/teal_700"
            android:textStyle="bold"
            android:text="Forgot Password"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/ic_forgot"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
  <RelativeLayout
      android:id="@+id/rl1LA"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      <androidx.appcompat.widget.AppCompatTextView

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/tv_Copyright"
          android:layout_alignParentBottom="true"
          android:drawableStart="@drawable/ic_copyright"
          android:padding="20dp"
          android:text=" 2022 "
          />
  </RelativeLayout>
</LinearLayout>